// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavigationBar renders correctly for language {
  name: 'Українська',
  code: 'uk',
  path: '/uk',
  dateFormat: 'DD.MM.YYYY'
} when isActive false 1`] = `
<div>
  <nav
    class="navigationBar "
  >
    <a
      activeclassname="active"
      aria-label="Головна"
      class="navigationBar__link"
      href="/uk"
      hreflang="uk"
    >
      Головна
    </a>
    <a
      activeclassname="active"
      aria-label="Бібліотека істот"
      class="navigationBar__link"
      href="/uk/істоти"
      hreflang="uk"
    >
      Бібліотека істот
    </a>
    <a
      activeclassname="active"
      aria-label="Мітки"
      class="navigationBar__link"
      href="/uk/мітки"
      hreflang="uk"
    >
      Мітки
    </a>
    <a
      activeclassname="active"
      aria-label="Про проект"
      class="navigationBar__link"
      href="/uk/about"
      hreflang="uk"
    >
      Про проект
    </a>
    <a
      activeclassname="active"
      aria-label="Пошук"
      class="navigationBar__link"
      href="/uk/search"
      hreflang="uk"
    >
      Пошук
    </a>
  </nav>
</div>
`;

exports[`NavigationBar renders correctly for language {
  name: 'Українська',
  code: 'uk',
  path: '/uk',
  dateFormat: 'DD.MM.YYYY'
} when isActive true 1`] = `
<div>
  <nav
    class="navigationBar active"
  >
    <a
      activeclassname="active"
      aria-label="Головна"
      class="navigationBar__link"
      href="/uk"
      hreflang="uk"
    >
      Головна
    </a>
    <a
      activeclassname="active"
      aria-label="Бібліотека істот"
      class="navigationBar__link"
      href="/uk/істоти"
      hreflang="uk"
    >
      Бібліотека істот
    </a>
    <a
      activeclassname="active"
      aria-label="Мітки"
      class="navigationBar__link"
      href="/uk/мітки"
      hreflang="uk"
    >
      Мітки
    </a>
    <a
      activeclassname="active"
      aria-label="Про проект"
      class="navigationBar__link"
      href="/uk/about"
      hreflang="uk"
    >
      Про проект
    </a>
    <a
      activeclassname="active"
      aria-label="Пошук"
      class="navigationBar__link"
      href="/uk/search"
      hreflang="uk"
    >
      Пошук
    </a>
  </nav>
</div>
`;

exports[`NavigationBar renders correctly for language { name: 'English', code: 'en', path: '', dateFormat: 'DD/MM/YYYY' } when isActive false 1`] = `
<div>
  <nav
    class="navigationBar "
  >
    <a
      activeclassname="active"
      aria-label="Home"
      class="navigationBar__link"
      href="/"
      hreflang="en"
    >
      Home
    </a>
    <a
      activeclassname="active"
      aria-label="Creatures"
      class="navigationBar__link"
      href="/creatures"
      hreflang="en"
    >
      Creatures
    </a>
    <a
      activeclassname="active"
      aria-label="Tags"
      class="navigationBar__link"
      href="/tags"
      hreflang="en"
    >
      Tags
    </a>
    <a
      activeclassname="active"
      aria-label="About"
      class="navigationBar__link"
      href="/about"
      hreflang="en"
    >
      About
    </a>
    <a
      activeclassname="active"
      aria-label="Search"
      class="navigationBar__link"
      href="/search"
      hreflang="en"
    >
      Search
    </a>
  </nav>
</div>
`;

exports[`NavigationBar renders correctly for language { name: 'English', code: 'en', path: '', dateFormat: 'DD/MM/YYYY' } when isActive true 1`] = `
<div>
  <nav
    class="navigationBar active"
  >
    <a
      activeclassname="active"
      aria-label="Home"
      class="navigationBar__link"
      href="/"
      hreflang="en"
    >
      Home
    </a>
    <a
      activeclassname="active"
      aria-label="Creatures"
      class="navigationBar__link"
      href="/creatures"
      hreflang="en"
    >
      Creatures
    </a>
    <a
      activeclassname="active"
      aria-label="Tags"
      class="navigationBar__link"
      href="/tags"
      hreflang="en"
    >
      Tags
    </a>
    <a
      activeclassname="active"
      aria-label="About"
      class="navigationBar__link"
      href="/about"
      hreflang="en"
    >
      About
    </a>
    <a
      activeclassname="active"
      aria-label="Search"
      class="navigationBar__link"
      href="/search"
      hreflang="en"
    >
      Search
    </a>
  </nav>
</div>
`;

exports[`NavigationBar renders correctly for language { name: 'Русский', code: 'ru', path: '/ru', dateFormat: 'DD.MM.YYYY' } when isActive false 1`] = `
<div>
  <nav
    class="navigationBar "
  >
    <a
      activeclassname="active"
      aria-label="Главная"
      class="navigationBar__link"
      href="/ru"
      hreflang="ru"
    >
      Главная
    </a>
    <a
      activeclassname="active"
      aria-label="Библиотека существ"
      class="navigationBar__link"
      href="/ru/существа"
      hreflang="ru"
    >
      Библиотека существ
    </a>
    <a
      activeclassname="active"
      aria-label="Метки"
      class="navigationBar__link"
      href="/ru/метки"
      hreflang="ru"
    >
      Метки
    </a>
    <a
      activeclassname="active"
      aria-label="О проекте"
      class="navigationBar__link"
      href="/ru/about"
      hreflang="ru"
    >
      О проекте
    </a>
    <a
      activeclassname="active"
      aria-label="Поиск"
      class="navigationBar__link"
      href="/ru/search"
      hreflang="ru"
    >
      Поиск
    </a>
  </nav>
</div>
`;

exports[`NavigationBar renders correctly for language { name: 'Русский', code: 'ru', path: '/ru', dateFormat: 'DD.MM.YYYY' } when isActive true 1`] = `
<div>
  <nav
    class="navigationBar active"
  >
    <a
      activeclassname="active"
      aria-label="Главная"
      class="navigationBar__link"
      href="/ru"
      hreflang="ru"
    >
      Главная
    </a>
    <a
      activeclassname="active"
      aria-label="Библиотека существ"
      class="navigationBar__link"
      href="/ru/существа"
      hreflang="ru"
    >
      Библиотека существ
    </a>
    <a
      activeclassname="active"
      aria-label="Метки"
      class="navigationBar__link"
      href="/ru/метки"
      hreflang="ru"
    >
      Метки
    </a>
    <a
      activeclassname="active"
      aria-label="О проекте"
      class="navigationBar__link"
      href="/ru/about"
      hreflang="ru"
    >
      О проекте
    </a>
    <a
      activeclassname="active"
      aria-label="Поиск"
      class="navigationBar__link"
      href="/ru/search"
      hreflang="ru"
    >
      Поиск
    </a>
  </nav>
</div>
`;
